Finished plaid webhooks, link update mode

--- a/backend/server/data/link_update_mode.html
+++ b/backend/server/data/link_update_mode.html
@@ -26,7 +26,7 @@
             const handler = Plaid.create({
                 token: linkToken,
                 onSuccess: function (public_token, metadata) {
-                    window.location.href = 'http://localhost:8080/plaid-update-callback';
+                    window.location.href = 'http://localhost:8080/plaid-update-callback?item_id=' + metadata.item_id;
                 },
                 onExit: function (err, metadata) {
                     let exitUrl = 'http://localhost:8080/plaid-exit';
