--- a/backend/server/data/link.html
+++ b/backend/server/data/link.html
@@ -16,6 +16,10 @@
             return url.searchParams.get('token');
         }
 
+        function getBaseUrl() {
+            return window.location.origin;
+        }
+
         document.getElementById('link-btn').onclick = function () {
             const linkToken = getLinkToken();
             if (!linkToken) {
@@ -23,13 +27,13 @@
                 return;
             }
 
-             const handler = Plaid.create({
+            const handler = Plaid.create({
                 token: linkToken,
                 onSuccess: function (public_token, metadata) {
-                    window.location.href = 'http://localhost:8080/plaid-callback?public_token=' + public_token;
+                    window.location.href = baseUrl + '/plaid-callback?public_token=' + public_token;
                 },
                 onExit: function (err, metadata) {
-                    let exitUrl = 'http://localhost:8080/plaid-exit'; 
+                    let exitUrl = baseUrl + '/plaid-exit';
 
                     if (err != null) {
                         exitUrl += '?error_code=' + err.error_code + '&error_type=' + err.error_type;
