--- a/backend/server/data/link_update_mode.html
+++ b/backend/server/data/link_update_mode.html
@@ -16,6 +16,10 @@
             return url.searchParams.get('token');
         }
 
+        function getBaseUrl() {
+            return window.location.origin;
+        }
+
         document.getElementById('link-btn').onclick = function () {
             const linkToken = getLinkToken();
             if (!linkToken) {
@@ -26,10 +30,10 @@
             const handler = Plaid.create({
                 token: linkToken,
                 onSuccess: function (public_token, metadata) {
-                    window.location.href = 'http://localhost:8080/plaid-update-callback?item_id=' + metadata.item_id;
+                    window.location.href = baseUrl + '/plaid-update-callback?item_id=' + metadata.item_id;
                 },
                 onExit: function (err, metadata) {
-                    let exitUrl = 'http://localhost:8080/plaid-exit';
+                    let exitUrl = baseUrl + '/plaid-exit';
 
                     if (err != null) {
                         exitUrl += '?error_code=' + err.error_code + '&error_type=' + err.error_type;
